# nested-mcps

./: .env.example  .gitignore  Makefile  README.md  main.py  plan.md  pyproject.toml
.serena/: project.yml
extension/: manifest.json
extension/server/: proxy.py
src/mcp1_vectorstore/: server.py  settings.py
src/mcp2_orchestrator/: agent.py  mcp1_client.py  server.py  settings.py
