[project]
name = "acme-mcp"
version = "0.1.0"
description = "Nested MCP system: vector store + orchestrator"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mcp",
    "openai",
    "numpy",
    "pydantic-settings",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
]

[project.scripts]
mcp1 = "mcp1_vectorstore.server:main"
mcp2 = "mcp2_orchestrator.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp1_vectorstore", "src/mcp2_orchestrator"]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
